enfin ca marche lets gooo

--- a/vectors/Makefile
+++ b/vectors/Makefile
@@ -6,11 +6,11 @@
 #    By: albaud <albaud@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/17 18:46:11 by albaud            #+#    #+#              #
-#    Updated: 2022/12/10 22:30:23 by albaud           ###   ########.fr        #
+#    Updated: 2022/12/11 21:36:42 by albaud           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS 	= v_add.c v_angle.c v_dist.c v_div.c v_dotp.c v_mult.c v_norme.c v_rm.c v_tocol.c v_v3mult.c
+SRCS 	= v_add.c v_angle.c v_average.c v_dist.c v_div.c v_dotp.c v_equal.c v_mult.c v_norme.c v_null.c v_ponline.c v_rm.c v_tocol.c v_unit.c v_v3mult.c
 OBJS 	= ${SRCS:.c=.o}
 NAME 	= vlib.a
 CC		= gcc
